gap fixed

--- a/styles/flower.css
+++ b/styles/flower.css
@@ -143,26 +143,30 @@
     align-items: center;
     padding:  20px;
     margin: 0 auto;
+    
 }
 
 .banner-title{
   color: #000000;
   font-size: 4.0625rem;
   font-weight: bold;
-
+  margin: 0;
 
 }
 
 .banner-description{
     color: rgba(0, 0, 0, 0.5);
     font-size:1.375rem ;
+    padding: 0;
+    margin: 0;
 }
 
 
 /* plants */
-.Plants{
+.our-Plants{
     margin: 0 auto;
-    padding: 40px;
+    padding: 20px;
+     margin-bottom: 60px;
 }
 .plant-content{
     text-align: center;
@@ -178,7 +182,9 @@
 .plant-card-container{
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    gap: 20px;
+    row-gap: 25px;
+    column-gap: 0.25px;
+    /* gap: 5px; */
     margin: 0 auto;
 
 }
@@ -186,6 +192,9 @@
     font-size: 1.375rem;
     font-weight: 200;
     color: #111111;
+    padding: 0;
+    margin: 0 auto;
+    gap: 5px;
 
 }
 .plant-price{
@@ -197,10 +206,18 @@
 
 
 /* plants lover section */
+.Plants{
+    margin: 0 auto;
+    padding: 20px;
+     margin-top: 60px;
+     margin-bottom: 60px;
+}
+
 .plants-lover{
     display: flex;
     justify-content: space-evenly;
     align-items: center ;
+    
 }
 .plants-lover-container{
     position: relative;
@@ -240,7 +257,8 @@ font-size: 1.375rem;
            
              text-align: center;
              gap: 120px;
-             margin: 0 auto ;          
+             margin: 0 auto ;      
+              margin-top: 60px;    
            /* padding: 50px 30px 19px 30px; */
             
 }
